# procli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  mise.toml  prat.toml
.github/workflows/: release.yml
src/: app.rs  config.rs  event.rs  main.rs  proc.rs  resample.rs  theme.rs  ui.rs
src/proc/: command.rs  manager.rs  process.rs  stats.rs
src/ui/: dashboard.rs  debug.rs  process.rs  stat_line.rs  state.rs  theme.rs
