[package]
name = "procli"
version = "0.1.1"
description = "Process management CLI for development systems"
authors = ["Paul <paul@stackfull.com>"]
license = "MIT"
edition = "2024"
readme = "README.md"
repository = "https://github.com/stackfull/procli"
homepage = "https://github.com/stackfull/procli"
categories = ["command-line-utilities", "development-tools", "visualization"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
clap = { version = "4.5.55", features = ["derive"] }
config = "0.15.19"
notify = { version = "8.2.0", features = ["serde"] }
tui-logger = { version = "0.18.1", features = ["crossterm"] }
log = "0.4.29"
shlex = "1.3.0"
uuid = { version = "1.20.0", features = ["v4"]}
sysinfo = "0.38.0"


# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
